# bank-service/entities/bankAccount.entity.ts
@@ -1,0 +1,16 @@
+import { Entity, PrimaryGeneratedColumn, Column, ManyToOne, JoinColumn } from "typeorm";
+
+@Entity()
+export class BankAccount {
+  @PrimaryGeneratedColumn()
+  id!: number;
+
+  @Column()
+  userId!: string;
+
+  @Column()
+  bankId!: number;
+
+  @Column({ type: "float", default: 0 })
+  balance!: number;
+}
